--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -33,7 +33,7 @@
         <h4><a href="/blog/{{blog.id}}">{{blog.title}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger delete" data-id={{blog.id}}>DELETE</button>
       </div>
     </div>
     {{/each}}
