comments now post to database

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -5,6 +5,14 @@
   <p>
     
   <p>
-    <button class="btn btn-primary">Write Comment:</button>
   </p>
+  <div>
+    <form id="comment-form">
+      <div class="form-group">
+        <label for="comment">Write a Comment:</label>
+        <textarea class="form-control" id="comment-textarea" name="comment" rows="3"></textarea>
+      </div>
+      <button id="comment-button" type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
+<script src="/js/comment.js"></script>
