made changes to update comments to render on blog page

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -15,4 +15,10 @@
       <button id="comment-button" type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
+{{#each comments}}
+<div class="comment">
+  <h2>{{user.name}}</h2>
+  {{{content}}}
+</div>
+{{/each}}
 <script src="/js/comment.js"></script>
